# Q-AssertBench

./: .gitignore  README.md  pyproject.toml  requirements.txt
archive/Q-AssertBench(old)/QAB01/: faulty.py  gold_assertion.py  program.py  prompt.py
archive/Q-AssertBench(old)/QAB02/: faulty.py  gold_assertion.py  program.py  prompt.py
archive/Q-AssertBench(old)/QAB03/: faulty.py  gold_assertion.py  program.py  prompt.py
archive/Q-AssertBench(old)/QAB04/: faulty.py  gold_assertion.py  prompt.py
archive/Q-AssertBench(old)/QAB05/: faulty.py  gold_assertion.py  program.py  prompt.py
archive/Q-AssertBench(old)/QAB06/: faulty.py  (+3 more)
scripts/: audit_prompt_rendering.py  backfill_generation_records.py  run_evaluation.py  run_generation.py  summarize_results.py  validate_tasks.py
src/qasserbench/: __init__.py
src/qasserbench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_backfill_generation_records.py  test_candidate_extraction.py  test_end_to_end_pilot.py  test_evaluation_pipeline.py  test_execution_runner.py  test_generation_driver.py  test_gold_alignment.py  test_layout.py  test_openai_compatible_client.py  test_outcome_classification.py  test_pilot_tasks.py  test_pre_experiment_readiness.py  test_prompt_rendering.py  test_qab01_03_quality.py  test_qab04_08_quality.py  test_qab09_13_quality.py  test_qab14_18_quality.py  test_qab19_23_quality.py  test_qab24_28_quality.py  test_qab29_31_quality.py  test_qab32_34_quality.py  test_qab35_37_quality.py  test_reporting.py  test_runtime_interfaces.py  test_task_catalog.py  test_task_loader.py
(+615 files in other folders)
