[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qasserbench"
version = "0.1.0"
description = "Benchmark scaffold for quantum assertion and verification experiments"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.30.0",
    "pyyaml>=6.0",
    "qiskit>=2.3.1",
    "qiskit-aer>=0.17.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
